[gd_scene load_steps=4 format=3 uid="uid://d1st0awims1mh"]

[ext_resource type="Script" uid="uid://cmwrniqhh55jj" path="res://GUI/MiniGames/truth_table_puzzle_game.gd" id="1_hifog"]
[ext_resource type="FontFile" uid="uid://c8fgo04h80ehc" path="res://GUI/Font/PressStart2P-Regular.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy381"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="TruthTablePuzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hifog")
metadata/_custom_type_script = "uid://cl7clonne0s1x"

[node name="Root" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackDrop" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Center" type="CenterContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Root/Center"]
custom_minimum_size = Vector2(380, 220)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iy381")

[node name="Header" type="Label" parent="Root/Center/Panel"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
text = "Complete the Truth Table"
horizontal_alignment = 1

[node name="TableGrid" type="GridContainer" parent="Root/Center/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 20.0
offset_right = -5.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2
columns = 7

[node name="AttemptsLabel" type="Label" parent="Root/Center/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_override_font_sizes/font_size = 8

[node name="Buttons" type="HBoxContainer" parent="Root/Center/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="CheckButton" type="Button" parent="Root/Center/Panel/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 8
text = "Check"

[node name="ClearButton" type="Button" parent="Root/Center/Panel/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 8
text = "Clear"

[node name="CloseButton" type="Button" parent="Root/Center/Panel/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 8
text = "Close
"

[node name="Feedback" type="Label" parent="Root/Center/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
